tests/compilefail18.out
[1mtests/compilefail18.pas:4:1: [0m[1m[91merror:[0m Function addone missing return type
     4 | function addone(r:integer);